--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Smart Study</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
+<div id="scrollTopBtn">
+<svg viewBox="0 0 36 36">
+<path class="bg" d="M18 2.5
+a15.5 15.5 0 0 1 0 31
+a15.5 15.5 0 0 1 0 -31"/>
+<path class="progress" id="scrollProgress"
+d="M18 2.5
+a15.5 15.5 0 0 1 0 31
+a15.5 15.5 0 0 1 0 -31"/>
+</svg>
+<span style="position:absolute;font-size:20px;">⬆</span>
+</div>
+
 <style>
 
 body{
     margin:0;
-    font-family:Arial, sans-serif;
+    font-family:'Tajawal', Arial, sans-serif;
     background-image:url("./Ai.png");
     background-size:cover;
     background-position:center;
@@ -18,7 +32,6 @@ body{
     text-align:center;
 }
 
-/* الخلفية */
 body::before{
     content:"";
     position:fixed;
@@ -27,28 +40,50 @@ body::before{
     z-index:-1;
 }
 
-/* العنوان */
 h1{
     color:#ffd166;
-    margin-top:40px;
-    font-size:50px;
+    margin-top:30px;
+    font-size:65px;
+    font-weight:700;
+    letter-spacing:3px;
+
+    text-shadow:0 0 10px rgba(255,255,255,0.3);
+
+    animation:titleShow 2s ease forwards;
 }
 
-/* الهيرو */
+@keyframes titleShow{
+    from{
+        opacity:0;
+        transform:translateY(-30px);
+    }
+    to{
+        opacity:1;
+        transform:translateY(0);
+    }
+}
 .hero{
     padding:90px 20px;
+    text-shadow:0 0 10px rgba(255,255,255,0.3);
+
+    animation:titleShow 2s ease forwards;
 }
 
 .hero h2{
     color:#ffd166;
     font-size:38px;
+    text-shadow:0 0 10px rgba(255,255,255,0.3);
+
+    animation:titleShow 2s ease forwards;
 }
 
-/* الشبكة */
 .container{
     max-width:1100px;
     margin:auto;
     padding:40px 20px;
+    text-shadow:0 0 10px rgba(255,255,255,0.3);
+
+    animation:titleShow 2s ease forwards;
 }
 
 .cards-group{
@@ -57,26 +92,40 @@ h1{
     gap:30px;
 }
 
-/* الكارد */
 .card{
     background: rgba(255,255,255,0.12);
     padding:28px;
     border-radius:26px;
-    transition:0.4s ease;
     backdrop-filter: blur(12px);
     box-shadow:0 0 25px rgba(0,0,0,0.25);
 
     opacity:0;
-    transform:translateY(40px);
+    transform:translateY(60px);
+    transition:0.4s ease;
+}
+
+.card:hover{
+    transform:translateY(-8px) scale(1.02);
 }
 
 .card.show{
-    opacity:1;
-    transform:translateY(0);
+    animation:cardShow 0.8s ease forwards;
+}
+
+@keyframes cardShow{
+    from{
+        opacity:0;
+        transform:translateY(60px);
+    }
+    to{
+        opacity:1;
+        transform:translateY(0);
+    }
 }
 
 .card:hover{
     transform:translateY(-8px);
+    transition:0.4s ease;
 }
 
 .card h3{
@@ -88,7 +137,6 @@ h1{
     font-size:15px;
 }
 
-/* الأزرار */
 button{
     padding:13px 24px;
     border:none;
@@ -99,7 +147,6 @@ button{
     margin-top:14px;
 }
 
-/* المدخلات */
 textarea,input,select{
     padding:12px;
     width:92%;
@@ -108,14 +155,104 @@ textarea,input,select{
     margin-top:14px;
 }
 
-/* النتائج */
 .result{
     margin-top:18px;
     color:#ffd166;
     font-weight:bold;
+    white-space:pre-line;
+}
+#scrollTopBtn{
+    position:fixed;
+    bottom:25px;
+    right:25px;
+    width:60px;
+    height:60px;
+    cursor:pointer;
+    display:none;
+    align-items:center;
+    justify-content:center;
 }
 
-/* الفوتر */
+#scrollTopBtn svg{
+    width:60px;
+    height:60px;
+    transform:rotate(-90deg);
+}
+
+#scrollTopBtn path{
+    fill:none;
+    stroke-width:3;
+}
+
+#scrollTopBtn .bg{
+    stroke:rgba(255,255,255,0.2);
+}
+
+#scrollTopBtn .progress{
+    stroke:#ffd166;
+    stroke-linecap:round;
+    stroke-dasharray:100;
+    stroke-dashoffset:100;
+    transition:0.2s;
+}
+
+/* تأثير الكتابة الذكي */
+.typing::after{
+    content:"";
+    display:inline-block;
+    width:6px;
+    height:18px;
+    background:#ffd166;
+    margin-right:4px;
+    animation:blink 0.7s infinite;
+    vertical-align:middle;
+}
+
+@keyframes blink{
+    50%{opacity:0;}
+}
+
+/* زر الرجوع لأعلى */
+#scrollTopBtn{
+    position:fixed;
+    bottom:25px;
+    right:25px;
+    width:60px;
+    height:60px;
+    cursor:pointer;
+    display:none;
+    align-items:center;
+    justify-content:center;
+}
+
+#scrollTopBtn span{
+    position:absolute;
+    font-size:20px;
+}
+
+#scrollTopBtn svg{
+    width:60px;
+    height:60px;
+    transform:rotate(-90deg);
+}
+
+#scrollTopBtn path{
+    fill:none;
+    stroke-width:3;
+}
+
+#scrollTopBtn .bg{
+    stroke:rgba(255,255,255,0.2);
+}
+
+#scrollTopBtn .progress{
+    stroke:#ffd166;
+    stroke-linecap:round;
+    stroke-dasharray:100;
+    stroke-dashoffset:100;
+    transition:0.2s;
+}
+
 .footer{
     background:rgba(0,0,0,0.5);
     padding:20px;
@@ -129,22 +266,19 @@ textarea,input,select{
 <body>
 
 <h1>Smart Study</h1>
-<p>المذاكرة باستخدام الذكاء الاصطناعي</p>
+<p style="text-shadow:0 0 10px rgba(255,255,255,0.3);
+
+    animation:titleShow 2s ease forwards;">المذاكرة باستخدام الذكاء الاصطناعي</p>
 
 <div class="hero">
-
 <h2>مصممة لكل فرد في الرحلة التعليمية</h2>
-
 <p>📚 الموقع يساعد الطالب – المعلم – ولي الأمر – المدرسة</p>
-
 </div>
 
 <div class="container">
-
 <div class="cards-group">
 
-<!-- شرح الفئات -->
-<div class="card show">
+<div class="card">
 <h3>👨‍🎓 كيف يساعد الطالب؟</h3>
 <p>
 📘 شرح الدروس بطريقة مبسطة<br>
@@ -154,7 +288,7 @@ textarea,input,select{
 </p>
 </div>
 
-<div class="card show">
+<div class="card">
 <h3>👩‍🏫 كيف يساعد المعلم؟</h3>
 <p>
 📖 تبسيط الشرح للطلاب<br>
@@ -163,7 +297,7 @@ textarea,input,select{
 </p>
 </div>
 
-<div class="card show">
+<div class="card">
 <h3>👨‍👩‍👧 كيف يساعد ولي الأمر؟</h3>
 <p>
 📊 متابعة مستوى الطالب<br>
@@ -171,7 +305,7 @@ textarea,input,select{
 </p>
 </div>
 
-<div class="card show">
+<div class="card">
 <h3>🏫 كيف تساعد المدرسة؟</h3>
 <p>
 🏫 دعم التعليم الذكي<br>
@@ -179,75 +313,51 @@ textarea,input,select{
 </p>
 </div>
 
-<!-- الذكاء الاصطناعي -->
 <div class="card">
 <h3>🤖 الذكاء الاصطناعي</h3>
-
 <input type="text" id="chatInput" placeholder="اكتب سؤالك هنا">
-
-<button onclick="smartChat()">💡 اسأل الذكاء الاصطناعي</button>
-
+<button onclick="smartChat()">💡اسئل الذكاء الاصطناعي عن طريقة للمذاكره</button>
 <p id="aiAnswer" class="result"></p>
 </div>
 
-<!-- التقييم -->
 <div class="card">
 <h3>📚 تقييم المواد الدراسية</h3>
-
 <select id="subject">
 <option>اللغة العربية</option>
 <option>الرياضيات</option>
 <option>اللغة الإنجليزية</option>
 <option>التاريخ</option>
-<option>الجغرافيا</option>
+<option>الفرنساوي</option>
 <option>العلوم</option>
 <option>الفلسفة</option>
+<option>البرمجة</option>
 </select>
-
 <input type="number" id="grade" placeholder="اكتب درجتك">
-
 <button onclick="evaluateGrade()">تقييم</button>
 <p id="result" class="result"></p>
 </div>
 
-<!-- النصائح -->
 <div class="card">
 <h3>📖 نصائح حسب المادة</h3>
-
 <select id="adviceSubject">
 <option>اللغة العربية</option>
 <option>الرياضيات</option>
 <option>اللغة الإنجليزية</option>
 <option>التاريخ</option>
-<option>الجغرافيا</option>
+<option>الفرنساوي</option>
 <option>العلوم</option>
 <option>الفلسفة</option>
+<option>البرمجة</option>
 </select>
-
 <button onclick="giveAdvice()">اعطني نصيحة</button>
 <p id="adviceResult" class="result"></p>
 </div>
 
-<!-- الخطة -->
-<div class="card">
-<h3>📖 خطة مذاكرة ذكية</h3>
-
-<input type="number" id="studyTime" placeholder="مدة المذاكرة بالدقائق">
-
-<button onclick="generatePlan()">إنشاء الخطة</button>
-<p id="planResult" class="result"></p>
-</div>
-
-<!-- المهام -->
 <div class="card">
 <h3>📅 تنظيم مهام اليوم</h3>
-
 <textarea id="dailyTasks" placeholder="اكتب المهام كل سطر"></textarea>
-
 <input type="number" id="dailyTime" placeholder="الوقت المتاح بالدقائق">
-
 <button onclick="generateDailySchedule()">تنظيم الوقت</button>
-
 <p id="scheduleResult" class="result"></p>
 </div>
 
@@ -260,14 +370,35 @@ Smart Study © 2025
 </div>
 
 <script>
+const scrollBtn=document.getElementById("scrollTopBtn");
+const progress=document.getElementById("scrollProgress");
 
-/* Animation */
+window.addEventListener("scroll",()=>{
+
+    let scrollTop=window.scrollY;
+    let docHeight=document.body.scrollHeight-window.innerHeight;
+
+    let percent=(scrollTop/docHeight)*100;
+
+    scrollBtn.style.display=scrollTop>200?"flex":"none";
+
+    let dash=100-percent;
+    progress.style.strokeDashoffset=dash<0?0:dash;
+
+});
+
+scrollBtn.onclick=()=>{
+    window.scrollTo({top:0,behavior:"smooth"});
+};
+
+/* ظهور الكروت */
 const cards=document.querySelectorAll(".card");
 
 function revealCards(){
     cards.forEach(card=>{
         let top=card.getBoundingClientRect().top;
-        if(top < window.innerHeight-80){
+
+        if(top < window.innerHeight-120){
             card.classList.add("show");
         }
     });
@@ -276,112 +407,88 @@ function revealCards(){
 window.addEventListener("scroll",revealCards);
 revealCards();
 
+/* تأثير الكتابة الذكي */
+function typeText(element,text,speed=25){
+
+    element.innerText="";
+    element.classList.add("typing");
+
+    let i=0;
+
+    function write(){
+        if(i < text.length){
+            element.innerText += text.charAt(i);
+            i++;
+            setTimeout(write,speed);
+        }else{
+            element.classList.remove("typing");
+        }
+    }
+
+    write();
+}
+
 /* شات بسيط */
 function smartChat(){
 
     let q=document.getElementById("chatInput").value;
-    let result=document.getElementById("aiAnswer");
+    let answer="";
 
-    if(q===""){
-        result.innerHTML="اكتب السؤال أولاً";
-        return;
+    if(q.trim()===""){
+        answer="اكتب سؤالك الأول 😊";
+    }
+    else{
+        answer=`➤ فهم الدرس كويس قبل الحفظ
+➤ ربط المعلومات ببعض
+➤ حل أسئلة كتير على نفس الفكرة
+➤ المراجعة بعد فترة قصيرة
+➤ كتابة الأخطاء`;
     }
 
-    let responses=[
-        "📚 حاول فهم الفكرة العامة قبل التفاصيل.",
-        "✏️ حل أمثلة مشابهة.",
-        "🧠 اقرأ الدرس مرة أخرى.",
-        "🌙 المراجعة قبل النوم مهمة."
-    ];
-
-    result.innerHTML=responses[Math.floor(Math.random()*responses.length)];
+    typeText(document.getElementById("aiAnswer"),answer);
 }
 
 function evaluateGrade(){
 
     let grade=document.getElementById("grade").value;
-    let result=document.getElementById("result");
+    let result="";
 
-    if(grade===""){
-        result.innerHTML="اكتب الدرجة أولاً";
-        return;
-    }
+    if(grade>=85) result="ممتاز 👏";
+    else if(grade>=70) result="جيد جدًا 👍";
+    else if(grade>=50) result="مقبول 🙂";
+    else result="محتاج مجهود أكبر 💪";
 
-    grade=Number(grade);
-
-    if(grade>=85) result.innerHTML="🔥 ممتاز جدًا";
-    else if(grade>=70) result.innerHTML="👍 جيد جدًا";
-    else if(grade>=50) result.innerHTML="📚 حاول تذاكر أكثر";
-    else result.innerHTML="❤️ مع المذاكرة ستتحسن";
+    typeText(document.getElementById("result"),result);
 }
 
 function giveAdvice(){
-
-    let subject=document.getElementById("adviceSubject").value;
-    let result=document.getElementById("adviceResult");
-
-    let advice={
-        "اللغة العربية":"📚 اقرأ النص وافهم الفكرة.",
-        "الرياضيات":"✏️ حل مسائل كثيرة.",
-        "اللغة الإنجليزية":"🧠 استمع للكلمات بصوت مرتفع.",
-        "التاريخ":"📖 اربط الأحداث ببعضها.",
-        "الجغرافيا":"🌍 استخدم الخرائط.",
-        "العلوم":"🔬 افهم التجربة قبل الحفظ.",
-        "الفلسفة":"🤔 حاول فهم المعنى."
-    };
-
-    result.innerHTML=advice[subject];
-}
-
-function generatePlan(){
-
-    let time=document.getElementById("studyTime").value;
-    let result=document.getElementById("planResult");
-
-    if(time===""){
-        result.innerHTML="اكتب الوقت أولاً";
-        return;
-    }
-
-    time=Number(time);
-
-    result.innerHTML=
-    "📚 مذاكرة "+Math.floor(time*0.8)+
-    " دقيقة + ⏳ راحة "+Math.floor(time*0.2)+" دقيقة";
+    typeText(document.getElementById("adviceResult"),
+        "افهم الدرس وطبق عليه أسئلة كثيرة");
 }
 
 function generateDailySchedule(){
 
-    let tasks=document.getElementById("dailyTasks").value.trim().split("\n");
-    let time=document.getElementById("dailyTime").value;
-    let result=document.getElementById("scheduleResult");
+    let tasks=document.getElementById("dailyTasks").value
+        .split("\n")
+        .filter(t=>t.trim()!=="");
 
-    if(tasks[0]===""){
-        result.innerHTML="اكتب المهام أولاً";
+    let time=Number(document.getElementById("dailyTime").value);
+
+    if(tasks.length===0 || time<=0){
+        typeText(document.getElementById("scheduleResult"),
+            "اكتب المهام والوقت 😊");
         return;
     }
 
-    if(time===""){
-        result.innerHTML="اكتب الوقت المتاح";
-        return;
-    }
+    let base=Math.floor(time/tasks.length);
 
-    time=Number(time);
-
-    let perTask=Math.floor((time*0.8)/tasks.length);
-    let rest=Math.floor(time*0.2);
-
-    let table="<table style='margin:auto;color:white'>";
+    let schedule="📅 خطتك المقترحة:\n\n";
 
     tasks.forEach(task=>{
-        table+=`<tr><td style='padding:8px;border:1px solid rgba(255,255,255,0.2)'>
-        ⏰ ${perTask} دقيقة → ${task}
-        </td></tr>`;
+        schedule+=`🔹 ${task}\n⏳ ${base} دقيقة\n\n`;
     });
 
-    table+=`<p>⏳ وقت الراحة: ${rest} دقيقة</p>`;
-
-    result.innerHTML=table;
+    typeText(document.getElementById("scheduleResult"),schedule);
 }
 
 </script>
