--- a/index.html
+++ b/index.html
@@ -6,20 +6,49 @@
 <title>Smart Study</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;700&display=swap" rel="stylesheet">
-<div id="scrollTopBtn">
-<svg viewBox="0 0 36 36">
-<path class="bg" d="M18 2.5
-a15.5 15.5 0 0 1 0 31
-a15.5 15.5 0 0 1 0 -31"/>
-<path class="progress" id="scrollProgress"
-d="M18 2.5
-a15.5 15.5 0 0 1 0 31
-a15.5 15.5 0 0 1 0 -31"/>
-</svg>
-<span style="position:absolute;font-size:20px;">⬆</span>
-</div>
 
 <style>
+#scrollTopBtn{
+    position:fixed;
+    bottom:25px;
+    right:25px;
+    width:60px;
+    height:60px;
+    cursor:pointer;
+    display:none;
+    align-items:center;
+    justify-content:center;
+    z-index:999;
+}
+
+#scrollTopBtn svg{
+    width:60px;
+    height:60px;
+    transform:rotate(-90deg);
+}
+
+#scrollTopBtn span{
+    position:absolute;
+    font-size:20px;
+    color:#ffd166;
+}
+
+#scrollTopBtn path{
+    fill:none;
+    stroke-width:3;
+}
+
+#scrollTopBtn .bg{
+    stroke:rgba(255,255,255,0.2);
+}
+
+#scrollTopBtn .progress{
+    stroke:#ffd166;
+    stroke-linecap:round;
+    stroke-dasharray:100;
+    stroke-dashoffset:100;
+    transition:0.2s;
+}
 
 body{
     margin:0;
@@ -46,9 +75,7 @@ h1{
     font-size:65px;
     font-weight:700;
     letter-spacing:3px;
-
     text-shadow:0 0 10px rgba(255,255,255,0.3);
-
     animation:titleShow 2s ease forwards;
 }
 
@@ -62,28 +89,21 @@ h1{
         transform:translateY(0);
     }
 }
+
 .hero{
     padding:90px 20px;
     text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
 }
 
 .hero h2{
     color:#ffd166;
     font-size:38px;
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
 }
 
 .container{
     max-width:1100px;
     margin:auto;
     padding:40px 20px;
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
 }
 
 .cards-group{
@@ -98,7 +118,6 @@ h1{
     border-radius:26px;
     backdrop-filter: blur(12px);
     box-shadow:0 0 25px rgba(0,0,0,0.25);
-
     opacity:0;
     transform:translateY(60px);
     transition:0.4s ease;
@@ -121,11 +140,6 @@ h1{
         opacity:1;
         transform:translateY(0);
     }
-}
-
-.card:hover{
-    transform:translateY(-8px);
-    transition:0.4s ease;
 }
 
 .card h3{
@@ -161,43 +175,9 @@ textarea,input,select{
     font-weight:bold;
     white-space:pre-line;
 }
-#scrollTopBtn{
-    position:fixed;
-    bottom:25px;
-    right:25px;
-    width:60px;
-    height:60px;
-    cursor:pointer;
-    display:none;
-    align-items:center;
-    justify-content:center;
-}
 
-#scrollTopBtn svg{
-    width:60px;
-    height:60px;
-    transform:rotate(-90deg);
-}
-
-#scrollTopBtn path{
-    fill:none;
-    stroke-width:3;
-}
-
-#scrollTopBtn .bg{
-    stroke:rgba(255,255,255,0.2);
-}
-
-#scrollTopBtn .progress{
-    stroke:#ffd166;
-    stroke-linecap:round;
-    stroke-dasharray:100;
-    stroke-dashoffset:100;
-    transition:0.2s;
-}
-
-/* تأثير الكتابة الذكي */
-.typing::after{
+/* تأثير الكتابة الذكية على كل الموقع */
+.smartTyping::after{
     content:"";
     display:inline-block;
     width:6px;
@@ -223,11 +203,6 @@ textarea,input,select{
     display:none;
     align-items:center;
     justify-content:center;
-}
-
-#scrollTopBtn span{
-    position:absolute;
-    font-size:20px;
 }
 
 #scrollTopBtn svg{
@@ -265,13 +240,23 @@ textarea,input,select{
 
 <body>
 
-<h1>Smart Study</h1>
-<p style="text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;">المذاكرة باستخدام الذكاء الاصطناعي</p>
+<div id="scrollTopBtn">
+<svg viewBox="0 0 36 36">
+<path class="bg" d="M18 2.5
+a15.5 15.5 0 0 1 0 31
+a15.5 15.5 0 0 1 0 -31"/>
+<path class="progress" id="scrollProgress"
+d="M18 2.5
+a15.5 15.5 0 0 1 0 31
+a15.5 15.5 0 0 1 0 -31"/>
+</svg>
+<span>⬆</span>
+</div>
+<h1 class="smartTyping">Smart Study</h1>
+<p class="smartTyping">المذاكرة باستخدام الذكاء الاصطناعي</p>
 
 <div class="hero">
-<h2>مصممة لكل فرد في الرحلة التعليمية</h2>
+<h2 class="smartTyping">مصممة لكل فرد في الرحلة التعليمية</h2>
 <p>📚 الموقع يساعد الطالب – المعلم – ولي الأمر – المدرسة</p>
 </div>
 
@@ -370,28 +355,7 @@ Smart Study © 2025
 </div>
 
 <script>
-const scrollBtn=document.getElementById("scrollTopBtn");
-const progress=document.getElementById("scrollProgress");
 
-window.addEventListener("scroll",()=>{
-
-    let scrollTop=window.scrollY;
-    let docHeight=document.body.scrollHeight-window.innerHeight;
-
-    let percent=(scrollTop/docHeight)*100;
-
-    scrollBtn.style.display=scrollTop>200?"flex":"none";
-
-    let dash=100-percent;
-    progress.style.strokeDashoffset=dash<0?0:dash;
-
-});
-
-scrollBtn.onclick=()=>{
-    window.scrollTo({top:0,behavior:"smooth"});
-};
-
-/* ظهور الكروت */
 const cards=document.querySelectorAll(".card");
 
 function revealCards(){
@@ -407,11 +371,11 @@ function revealCards(){
 window.addEventListener("scroll",revealCards);
 revealCards();
 
-/* تأثير الكتابة الذكي */
+/* تأثير الكتابة الذكية */
 function typeText(element,text,speed=25){
 
     element.innerText="";
-    element.classList.add("typing");
+    element.classList.add("smartTyping");
 
     let i=0;
 
@@ -421,7 +385,7 @@ function typeText(element,text,speed=25){
             i++;
             setTimeout(write,speed);
         }else{
-            element.classList.remove("typing");
+            element.classList.remove("smartTyping");
         }
     }
 
@@ -432,6 +396,7 @@ function typeText(element,text,speed=25){
 function smartChat(){
 
     let q=document.getElementById("chatInput").value;
+
     let answer="";
 
     if(q.trim()===""){
@@ -439,10 +404,11 @@ function smartChat(){
     }
     else{
         answer=`➤ فهم الدرس كويس قبل الحفظ
-➤ ربط المعلومات ببعض
-➤ حل أسئلة كتير على نفس الفكرة
-➤ المراجعة بعد فترة قصيرة
-➤ كتابة الأخطاء`;
+➤ ربط المعلومات ببعض علشان تثبت في الدماغ
+➤ بعد الفهم، حل أسئلة كتير على نفس الفكرة
+➤ المراجعة بعد فترة قصيرة مش قبل الامتحان بس
+➤ كتابة الأخطاء
+➤ الاستمرارية أهم من عدد الساعات`;
     }
 
     typeText(document.getElementById("aiAnswer"),answer);
@@ -450,7 +416,8 @@ function smartChat(){
 
 function evaluateGrade(){
 
-    let grade=document.getElementById("grade").value;
+    let grade=Number(document.getElementById("grade").value);
+
     let result="";
 
     if(grade>=85) result="ممتاز 👏";
@@ -464,6 +431,7 @@ function evaluateGrade(){
 function giveAdvice(){
 
     let subject=document.getElementById("adviceSubject").value;
+
     let advice="";
 
     if(subject==="الرياضيات"){
@@ -491,7 +459,7 @@ function giveAdvice(){
         advice="احفظ الكلمات بجمل، وافهم القواعد من خلال أمثلة، وتدرب على القطع والتعبير";
     }
 
-    document.getElementById("adviceResult").innerText=advice;
+    typeText(document.getElementById("adviceResult"),advice);
 }
 
 function generateDailySchedule(){
@@ -519,345 +487,6 @@ function generateDailySchedule(){
     typeText(document.getElementById("scheduleResult"),schedule);
 }
 
-</script>
-
-</body>
-</html>    position:fixed;
-    inset:0;
-    background:rgba(0,0,0,0.6);
-    z-index:-1;
-}
-
-h1{
-    color:#ffd166;
-    margin-top:30px;
-    font-size:65px;
-    font-weight:700;
-    letter-spacing:3px;
-
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
-}
-
-@keyframes titleShow{
-    from{
-        opacity:0;
-        transform:translateY(-30px);
-    }
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
-}
-.hero{
-    padding:90px 20px;
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
-}
-
-.hero h2{
-    color:#ffd166;
-    font-size:38px;
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
-}
-
-.container{
-    max-width:1100px;
-    margin:auto;
-    padding:40px 20px;
-    text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;
-}
-
-.cards-group{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-    gap:30px;
-}
-
-.card{
-    background: rgba(255,255,255,0.12);
-    padding:28px;
-    border-radius:26px;
-    backdrop-filter: blur(12px);
-    box-shadow:0 0 25px rgba(0,0,0,0.25);
-
-    opacity:0;
-    transform:translateY(60px);
-    transition:0.4s ease;
-}
-
-.card:hover{
-    transform:translateY(-8px) scale(1.02);
-}
-
-.card.show{
-    animation:cardShow 0.8s ease forwards;
-}
-
-@keyframes cardShow{
-    from{
-        opacity:0;
-        transform:translateY(60px);
-    }
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
-}
-
-.card:hover{
-    transform:translateY(-8px);
-    transition:0.4s ease;
-}
-
-.card h3{
-    color:#ffd166;
-}
-
-.card p{
-    line-height:1.7;
-    font-size:15px;
-}
-
-button{
-    padding:13px 24px;
-    border:none;
-    border-radius:30px;
-    background:linear-gradient(45deg,#00c3ff,#0088ff);
-    color:white;
-    cursor:pointer;
-    margin-top:14px;
-}
-
-textarea,input,select{
-    padding:12px;
-    width:92%;
-    border-radius:14px;
-    border:none;
-    margin-top:14px;
-}
-
-.result{
-    margin-top:18px;
-    color:#ffd166;
-    font-weight:bold;
-    white-space:pre-line;
-}
-#scrollTopBtn{
-    position:fixed;
-    bottom:25px;
-    right:25px;
-    width:60px;
-    height:60px;
-    cursor:pointer;
-    display:none;
-    align-items:center;
-    justify-content:center;
-}
-
-#scrollTopBtn svg{
-    width:60px;
-    height:60px;
-    transform:rotate(-90deg);
-}
-
-#scrollTopBtn path{
-    fill:none;
-    stroke-width:3;
-}
-
-#scrollTopBtn .bg{
-    stroke:rgba(255,255,255,0.2);
-}
-
-#scrollTopBtn .progress{
-    stroke:#ffd166;
-    stroke-linecap:round;
-    stroke-dasharray:100;
-    stroke-dashoffset:100;
-    transition:0.2s;
-}
-
-/* تأثير الكتابة الذكي */
-.typing::after{
-    content:"";
-    display:inline-block;
-    width:6px;
-    height:18px;
-    background:#ffd166;
-    margin-right:4px;
-    animation:blink 0.7s infinite;
-    vertical-align:middle;
-}
-
-@keyframes blink{
-    50%{opacity:0;}
-}
-
-/* زر الرجوع لأعلى */
-#scrollTopBtn{
-    position:fixed;
-    bottom:25px;
-    right:25px;
-    width:60px;
-    height:60px;
-    cursor:pointer;
-    display:none;
-    align-items:center;
-    justify-content:center;
-}
-
-#scrollTopBtn span{
-    position:absolute;
-    font-size:20px;
-}
-
-#scrollTopBtn svg{
-    width:60px;
-    height:60px;
-    transform:rotate(-90deg);
-}
-
-#scrollTopBtn path{
-    fill:none;
-    stroke-width:3;
-}
-
-#scrollTopBtn .bg{
-    stroke:rgba(255,255,255,0.2);
-}
-
-#scrollTopBtn .progress{
-    stroke:#ffd166;
-    stroke-linecap:round;
-    stroke-dasharray:100;
-    stroke-dashoffset:100;
-    transition:0.2s;
-}
-
-.footer{
-    background:rgba(0,0,0,0.5);
-    padding:20px;
-    color:#bcdffb;
-    margin-top:70px;
-}
-
-</style>
-</head>
-
-<body>
-
-<h1>Smart Study</h1>
-<p style="text-shadow:0 0 10px rgba(255,255,255,0.3);
-
-    animation:titleShow 2s ease forwards;">المذاكرة باستخدام الذكاء الاصطناعي</p>
-
-<div class="hero">
-<h2>مصممة لكل فرد في الرحلة التعليمية</h2>
-<p>📚 الموقع يساعد الطالب – المعلم – ولي الأمر – المدرسة</p>
-</div>
-
-<div class="container">
-<div class="cards-group">
-
-<div class="card">
-<h3>👨‍🎓 كيف يساعد الطالب؟</h3>
-<p>
-📘 شرح الدروس بطريقة مبسطة<br>
-📝 المساعدة في حل الواجبات<br>
-⏳ تنظيم وقت المذاكرة<br>
-💡 نصائح حسب المادة الدراسية
-</p>
-</div>
-
-<div class="card">
-<h3>👩‍🏫 كيف يساعد المعلم؟</h3>
-<p>
-📖 تبسيط الشرح للطلاب<br>
-🧠 دعم المحتوى التعليمي<br>
-🎯 أفكار لعرض الدرس
-</p>
-</div>
-
-<div class="card">
-<h3>👨‍👩‍👧 كيف يساعد ولي الأمر؟</h3>
-<p>
-📊 متابعة مستوى الطالب<br>
-📈 معرفة التقدم الدراسي
-</p>
-</div>
-
-<div class="card">
-<h3>🏫 كيف تساعد المدرسة؟</h3>
-<p>
-🏫 دعم التعليم الذكي<br>
-💡 تحسين تجربة التعلم
-</p>
-</div>
-
-<div class="card">
-<h3>🤖 الذكاء الاصطناعي</h3>
-<input type="text" id="chatInput" placeholder="اكتب سؤالك هنا">
-<button onclick="smartChat()">💡اسئل الذكاء الاصطناعي عن طريقة للمذاكره</button>
-<p id="aiAnswer" class="result"></p>
-</div>
-
-<div class="card">
-<h3>📚 تقييم المواد الدراسية</h3>
-<select id="subject">
-<option>اللغة العربية</option>
-<option>الرياضيات</option>
-<option>اللغة الإنجليزية</option>
-<option>التاريخ</option>
-<option>الفرنساوي</option>
-<option>العلوم</option>
-<option>الفلسفة</option>
-<option>البرمجة</option>
-</select>
-<input type="number" id="grade" placeholder="اكتب درجتك">
-<button onclick="evaluateGrade()">تقييم</button>
-<p id="result" class="result"></p>
-</div>
-
-<div class="card">
-<h3>📖 نصائح حسب المادة</h3>
-<select id="adviceSubject">
-<option>اللغة العربية</option>
-<option>الرياضيات</option>
-<option>اللغة الإنجليزية</option>
-<option>التاريخ</option>
-<option>الفرنساوي</option>
-<option>العلوم</option>
-<option>الفلسفة</option>
-<option>البرمجة</option>
-</select>
-<button onclick="giveAdvice()">اعطني نصيحة</button>
-<p id="adviceResult" class="result"></p>
-</div>
-
-<div class="card">
-<h3>📅 تنظيم مهام اليوم</h3>
-<textarea id="dailyTasks" placeholder="اكتب المهام كل سطر"></textarea>
-<input type="number" id="dailyTime" placeholder="الوقت المتاح بالدقائق">
-<button onclick="generateDailySchedule()">تنظيم الوقت</button>
-<p id="scheduleResult" class="result"></p>
-</div>
-
-</div>
-</div>
-
-<div class="footer">
-Smart Study © 2025  
-الموقع يساعدك في المذاكرة باستخدام الذكاء الاصطناعي
-</div>
-
-<script>
 const scrollBtn=document.getElementById("scrollTopBtn");
 const progress=document.getElementById("scrollProgress");
 
@@ -878,107 +507,6 @@ window.addEventListener("scroll",()=>{
 scrollBtn.onclick=()=>{
     window.scrollTo({top:0,behavior:"smooth"});
 };
-
-/* ظهور الكروت */
-const cards=document.querySelectorAll(".card");
-
-function revealCards(){
-    cards.forEach(card=>{
-        let top=card.getBoundingClientRect().top;
-
-        if(top < window.innerHeight-120){
-            card.classList.add("show");
-        }
-    });
-}
-
-window.addEventListener("scroll",revealCards);
-revealCards();
-
-/* تأثير الكتابة الذكي */
-function typeText(element,text,speed=25){
-
-    element.innerText="";
-    element.classList.add("typing");
-
-    let i=0;
-
-    function write(){
-        if(i < text.length){
-            element.innerText += text.charAt(i);
-            i++;
-            setTimeout(write,speed);
-        }else{
-            element.classList.remove("typing");
-        }
-    }
-
-    write();
-}
-
-/* شات بسيط */
-function smartChat(){
-
-    let q=document.getElementById("chatInput").value;
-    let answer="";
-
-    if(q.trim()===""){
-        answer="اكتب سؤالك الأول 😊";
-    }
-    else{
-        answer=`➤ فهم الدرس كويس قبل الحفظ
-➤ ربط المعلومات ببعض
-➤ حل أسئلة كتير على نفس الفكرة
-➤ المراجعة بعد فترة قصيرة
-➤ كتابة الأخطاء`;
-    }
-
-    typeText(document.getElementById("aiAnswer"),answer);
-}
-
-function evaluateGrade(){
-
-    let grade=document.getElementById("grade").value;
-    let result="";
-
-    if(grade>=85) result="ممتاز 👏";
-    else if(grade>=70) result="جيد جدًا 👍";
-    else if(grade>=50) result="مقبول 🙂";
-    else result="محتاج مجهود أكبر 💪";
-
-    typeText(document.getElementById("result"),result);
-}
-
-function giveAdvice(){
-    typeText(document.getElementById("adviceResult"),
-        "افهم الدرس وطبق عليه أسئلة كثيرة");
-}
-
-function generateDailySchedule(){
-
-    let tasks=document.getElementById("dailyTasks").value
-        .split("\n")
-        .filter(t=>t.trim()!=="");
-
-    let time=Number(document.getElementById("dailyTime").value);
-
-    if(tasks.length===0 || time<=0){
-        typeText(document.getElementById("scheduleResult"),
-            "اكتب المهام والوقت 😊");
-        return;
-    }
-
-    let base=Math.floor(time/tasks.length);
-
-    let schedule="📅 خطتك المقترحة:\n\n";
-
-    tasks.forEach(task=>{
-        schedule+=`🔹 ${task}\n⏳ ${base} دقيقة\n\n`;
-    });
-
-    typeText(document.getElementById("scheduleResult"),schedule);
-}
-
 </script>
 
 </body>
